Added Visualmem for MMC Read/Write
Added Visualmem "Defrag style"
Added browser for quicksave snapshots
Added save screen to bmp feature
Added Solarized Dark & Light Gui Style

Added ZRCP commands:
-save-screen: to save machine screen to file

Improved menu:
-Allow some windows to be put on the background. Also active windows are saved and restored on startup

Improved Esxdos handler: 
-add f_mkdir function 
-add configuration setting to save local work directory

Improved ZRCP:
-Allow to write commands between "". Not all commands support this
-Added save-binary command

Improved TBBlue emulation:
-Enable Timex video by default
-Added altrom feature: now 48k and 128k mode works again
-Legacy hi-res and border effects disabled by default. Reduces up to 13% cpu use or gain 17 FPS on my environment

Improved debugging:
-Added breakpoint action "reset-tstatp"
-Added SEG0, SEG1, ... SEG7 variables to match TBBlue MMU pages

Improved Chloe emulation: 
-Support CPU speed setting via the ZX-Uno SCANDBLCTRL register
-Load unodos3.rom as the default divmmc firmware
-Added chloehd.mmc in the extras package




Fixed ZRCP bugs:
-Fix possible crash when disconnecting socket

Fixed rom loading: no more cpu panic when the rom is not found 

Fixed Esxdos handler: 
-fixed segfaults when using a file handler that was a directory

Fixed SCF/CCF undocumented flags emulation. Not enabled by default on compilation because almost no one is using this



Version 8.1.1 - The Great Escape edition. 2 March 2020

Fixed starting the emulator on some Mac OS versions


Version 8.1 - The Great Escape edition. 25 February 2020


Added ZEsarUX Network Gaming protocol (ZENG), which allows you to play to any emulated game, using two ZEsarUX instances, 
located each one on any part of the world or in a local network. Games doesn't have to be modified, you can use any existing game

Added Spectrum and ZX81 online game browser. You can search & play almost any game for these machines!